--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.24",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
