--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 4900
 
-DB_URL = mongodb://127.0.0.1:27017/medik?retryWrites=true&w=majority
+DB_URL = mongodb://OutsideAdmin:eUskrCScaQ0c4xNK@127.0.0.1:27017/medik?retryWrites=true&w=majority
 
 SECRET = KhasanPidar
 SECRET_ADMIN = MariykaMedTechnica
