google strategy added

--- a/.env
+++ b/.env
@@ -8,4 +8,7 @@ SECRET_ADMIN = MariykaMedTechnica
 FB_CLIENT_ID = 2747272535506217
 FB_CLIENT_SECRET = 1e7fc52a83c4e3544af2817d8f5f1da7
 
+G_CLIENT_ID = 673893376681-19ic6q8r7j68fibh46imrtcsm6m38skb.apps.googleusercontent.com
+G_CLIENT_SECRET = vO080fxcmWTqdfKb4m-LEh6u
+
 SESSION_SECRET = MedTechnika
