--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
+    "memcached": "^2.2.2",
     "mongoose": "^5.9.24",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
