--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "googleapis": "^62.0.0",
     "jsonwebtoken": "^8.5.1",
     "memcached": "^2.2.2",
     "mongoose": "^5.9.24",
@@ -27,6 +28,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
+    "readline": "^1.3.0",
     "sharp": "^0.25.4"
   },
   "devDependencies": {
